--- a/scripts/vps-netns_dev_add.in
+++ b/scripts/vps-netns_dev_add.in
@@ -1,4 +1,5 @@
-#  Copyright (C) 2000-2008, Parallels, Inc. All rights reserved.
+#!/bin/sh
+#  Copyright (C) 2012, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -14,23 +15,29 @@
 #  along with this program; if not, write to the Free Software
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
+#
+# Set up a new network device using the iproute2 package.
+# Useful for running in non-OpenVZ kernels.
+#
+# Parameters are passed in environment variables.
+# Required parameters:
+#   VEID	- container ID
+#   HNAME       - desired device name as seen by the host
+#   VNAME       - desired device name as seen by the container
+# Optional parameters:
+#   HMAC        - host devices's MAC address
+#   VMAC        - container device's MAC address
+#   BRIDGE      - a bridge name to add HNAME to
 
-include $(top_srcdir)/pathsubst.am
+. @PKGCONFDIR@/vz.conf
+. @PKGLIBDIR@/scripts/vps-functions
 
-vzlib_SCRIPTS = \
-	vps-create \
-	vps-download \
-	vps-functions \
-	vps-net_add \
-	vps-netns_dev_add \
-	vps-netns_dev_del \
-	vps-net_del \
-	vzevent-stop \
-	vzevent-reboot \
-	vps-pci
+vzcheckvar VEID
+vzcheckvar VNAME
+vzcheckvar HNAME
 
-EXTRA_DIST = \
-	$(vzlib_SCRIPTS:%=%.in)
+vzcreatepair
+vzadjustmacs
+vzconfbridge
 
-CLEANFILES = \
-	$(vzlib_SCRIPTS)
+exit 0
