--- a/scripts/vps-netns_dev_add.in
+++ b/scripts/vps-netns_dev_add.in
@@ -24,7 +24,12 @@
 #   VEID	- container ID
 #   HNAME       - desired device name as seen by the host
 #   VNAME       - desired device name as seen by the container
-# Optional parameters:
+#
+# If NNAME == VNAME, a network interface is moved to inside CT.
+# Otherwise, a pair of veth devices (HNAME and VNAME) is created
+# in container, and then the HNAME is moved to host namespace.
+#
+# Optional parameters (for HNAME != VNAME case):
 #   HMAC        - host devices's MAC address
 #   VMAC        - container device's MAC address
 #   BRIDGE      - a bridge name to add HNAME to
@@ -36,8 +41,12 @@ vzcheckvar VEID
 vzcheckvar VNAME
 vzcheckvar HNAME
 
-vzcreatepair
-vzadjustmacs
-vzconfbridge
+if [ "x$HNAME" = "x$VNAME" ]; then
+	vzmoveif
+else
+	vzcreatepair
+	vzadjustmacs
+	vzconfbridge
+fi
 
 exit 0
