configure.ac: add check for setns()
When compiling with upstream support (i.e. --with-cgroup), we also
need setns() function. On some platforms (RHEL6) libcgroup is available
but setns() is not. Bail out sooner in this case.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/configure.ac
+++ b/configure.ac
@@ -155,7 +155,8 @@ AC_ARG_WITH([cgroup],
             [with_cgroup="-cgroup"])
 
 AS_IF([test "x$with_cgroup" = "x+cgroup"],
-        [ PKG_CHECK_MODULES(CGROUP, [libcgroup >= 0.35]) ]
+        [ PKG_CHECK_MODULES(CGROUP, [libcgroup >= 0.35]);
+          AC_CHECK_FUNC(setns, , AC_MSG_ERROR([function setns not found])) ]
 )
 AM_CONDITIONAL(HAVE_CGROUP, [test "x$with_cgroup" = "x+cgroup"])
 AC_SUBST(CGROUP_LIBS)
