Introduce and use VZ_PLOOP_UNSUP exit code
Ploop might be unsupported by either the kernel (non-RHEL6 kernel)
or userspace (ploop library not available). Return an appropriate
exit code in this case.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -1190,6 +1190,8 @@ Error setting devices (\fB--devices\fR or \fB--devnodes\fR)
 IP address not available
 .IP 91
 OS template not found
+.IP 99
+Ploop is not supported by either the running kernel or vzctl.
 .IP 100
 Unable to find container IP address
 .IP 104
