init.d/vz-redhat: fix errorneous lockfile removal
Commit 3ec48156c added trap statement to lockfile() to make sure
there is no lock file left after script finishes. Unfortunately,
this works even in the case when we report that OpenVZ is locked.

Fix by cleaning the trap in case we're already locked.

http://bugzilla.openvz.org/2342

Reported-by: Pavel Odintsov <pavel.odintsov@gmail.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -382,6 +382,7 @@ lockfile()
 		return 0;
 	}
 	kill -0 `cat $LOCKFILE` >/dev/null 2>&1 && {
+		trap -- - EXIT
 		return 1;
 	}
 	ln ${TEMPFILE} ${LOCKFILE} >/dev/null 2>&1 && {
