init.d/vz*: stop CTs in the in the reverse order to start
Indeed it makes sense to stop high-priority (as in bootorder) CTs last.

http://bugzilla.openvz.org/2330

Reported-by: mailinator <openvz@mailinator.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -184,7 +184,7 @@ stop_ve() {
 		for ((i = 0; i <= 2; i++)); do
 			iter=0
 			pids=
-			velist=$(awk '$1 != "VEID" && $1 != "Version:" {print $1}' ${VESTAT})
+			velist=$(vzlist -o ctid -sbootorder)
 			for veid in ${velist}; do
 				ebegin "Shutting down CT $veid"
 				# Set fairsched parameters to maximum so
