src/Makefile.am: fixed highly parallel build
make -j99 fails because make sees no dependency between src and lib.

Fix by removing prefix from VZCTL_LIBS, it seems to help and not break anything.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,7 +35,7 @@ sbin_PROGRAMS = arpsend \
                 vzsplit \
                 vzeventd
 
-VZCTL_LIBS = $(top_builddir)/src/lib/libvzctl.la
+VZCTL_LIBS = lib/libvzctl.la
 
 arpsend_SOURCES = arpsend.c
 
