Rectify scripts dir
We were using VZLIBDIR and PKGCONFDIR/scripts in different places.

This patch simplifies it, now we have SCRIPTDIR defined in paths.am
and propagated to all needed places. This makes all this stuff less
confusing, more straightforward.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -38,7 +38,7 @@
 
 # This line is needed to cheat /etc/init.d/rc who expects action word
 
-. @VZLIBDIR@/initd-functions
+. @SCRIPTDIR@/initd-functions
 
 VZQUOTA=@SBINDIR@/vzquota
 CONFIG_DIR=@PKGCONFDIR@/conf
