--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -21,7 +21,7 @@ INCLUDES = -I$(top_srcdir)/include
 
 AM_CFLAGS = -DSBINDIR=\"$(sbindir)\" \
             -DPKGCONFDIR=\"$(pkgconfdir)\" \
-            -DPKGLIBDIR=\"$(pkglibdir)\" \
+            -DSCRIPTDIR=\"$(scriptdir)\" \
             $(XML_CPPFLAGS) \
             $(CGROUP_CFLAGS)
 
