--- a/scripts/vps-netns_dev_add.in
+++ b/scripts/vps-netns_dev_add.in
@@ -35,7 +35,7 @@
 #   BRIDGE      - a bridge name to add HNAME to
 
 . @PKGCONFDIR@/vz.conf
-. @PKGLIBDIR@/scripts/vps-functions
+. @SCRIPTDIR@/vps-functions
 
 vzcheckvar VEID
 vzcheckvar VNAME
