Move scripts and modules to /usr/libexec
The problem with $libdir/vzctl is $libdir is arch-dependent, it is
either /usr/lib or /usr/lib64. The stuff under it is NOT arch-dependant
so it doesn't make much sense.

Therefore, let's move it to /usr/libexec/vzctl and relax.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/paths.am
+++ b/paths.am
@@ -36,5 +36,5 @@ vpsconfdir  = $(pkgconfdir)/conf
 distconfdir = $(pkgconfdir)/dists
 namesdir    = $(pkgconfdir)/names
 
-scriptdir   = $(pkglibdir)/scripts
-modulesdir  = $(pkglibdir)/modules
+scriptdir   = $(pkglibexecdir)/scripts
+modulesdir  = $(pkglibexecdir)/modules
