configure.ac: check for $target_cpu not $build_cpu
What we should care for is $target_cpu. It is not important in
the usual not cross-compiling case, but let's be perfect.

While at it, (re-)add a comment explaining why we need -m64. This
comment was initially introduced by commit 1eb3cfa and was later lost
in commit d69917c.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/configure.ac
+++ b/configure.ac
@@ -61,7 +61,8 @@ CFLAGS="${CFLAGS} -Wcast-align -Wno-unused-parameter"
 CFLAGS="${CFLAGS} -Wno-missing-field-initializers"
 CFLAGS="${CFLAGS} -D_FILE_OFFSET_BITS=64"
 
-if test x$build_cpu = xppc64 -o x$build_cpu = xpowerpc64; then
+# We need -m64 for ppc64 in order to get proper ioctls
+if test x$target_cpu = xppc64 -o x$target_cpu = xpowerpc64; then
 	CFLAGS="${CFLAGS} -m64"
 fi
 
