init.d/vz: deduce /vz from VE_ROOT/VE_PRIVATE
This is an improvement to commit 4733497. Instead of assuming
that VE_ROOT and VE_PRIVATE is under /vz, find out their common
prefix and use it. In case there's no common prefix (i.e. it is /)
we do nothing.

http://bugzilla.openvz.org/2361

Reported-by: Paparaciz <helpaz@gmail.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -186,9 +186,13 @@ modify_vzconf()
 fix_updatedb() {
 	local file="/etc/updatedb.conf"
 	local var="PRUNEPATHS"
-	local add="/vz"
+	local add
 
 	test -r $file || return
+	add=$(printf "$VE_ROOT\n$VE_PRIVATE" | \
+		sed -e 'N;s/^\(.*\).*\n\1.*$/\1/' -e 's@/[^/]*$@@')
+	test "$add" = "/" && return
+	test -d "$add" || return
 	grep -qw "^${var}" $file || return
 	grep -qE "^${var}.* ${add}[\" ]" $file && return
 	__echo "Adding ${add} to ${var} in ${file}:"
