vzmigrate: fix bashism
Ooops... commit 24a78bb3d9a introduced bashism (using == instead of =
when comparing strings in [ ]) and therefore the fix was only working
in bash not dash.

http://bugzilla.openvz.org/2316
http://bugzilla.openvz.org/2356

Reported-by: Kalin Bogatzevski <kalin@bul.net>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -544,7 +544,7 @@ if [ "$PLOOP" != "yes" ]; then
 	RSYNC1_OPTIONS="--sparse"
 	compact=0
 	snapshot=0
-elif [ "$state" == "running" ]; then
+elif [ "$state" = "running" ]; then
 	# Online ploop migration: exclude top delta
 	if ! get_ploop_info; then
 		log 0 "Can't get ploop information"
