Makefile.am: use AM_CPPFLAGS
(1) automake 1.11 documentation says that INCLUDES is obsoleted
    and AM_CPPFLAGS provides the same functionality

(2) Defines (-D) is a preprocessor directive, so it should go to
    AM_CPPFLAGS not AM_CFLAGS.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,12 +19,11 @@ include $(top_srcdir)/paths.am
 
 SUBDIRS = lib
 
-INCLUDES = -I$(top_srcdir)/include
-
-AM_CFLAGS = -DSBINDIR=\"$(sbindir)\" \
-            -DPKGCONFDIR=\"$(pkgconfdir)\" \
-            -DSCRIPTDIR=\"$(scriptdir)\" \
-            -DMODULESDIR=\"$(modulesdir)\"
+AM_CPPFLAGS = -I$(top_srcdir)/include \
+              -DSBINDIR=\"$(sbindir)\" \
+              -DPKGCONFDIR=\"$(pkgconfdir)\" \
+              -DSCRIPTDIR=\"$(scriptdir)\" \
+              -DMODULESDIR=\"$(modulesdir)\"
 
 sbin_PROGRAMS = arpsend \
                 ndsend \
