--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,6 +20,7 @@ include $(top_srcdir)/paths.am
 SUBDIRS = lib
 
 AM_CPPFLAGS = -I$(top_srcdir)/include \
+              -I$(top_builddir)/include \
               -DSBINDIR=\"$(sbindir)\" \
               -DPKGCONFDIR=\"$(pkgconfdir)\" \
               -DSCRIPTDIR=\"$(scriptdir)\" \
