--- a/paths.am
+++ b/paths.am
@@ -1,4 +1,4 @@
-#  Copyright (C) 2006-2008, Parallels, Inc. All rights reserved.
+#  Copyright (C) 2006-2012, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -26,6 +26,8 @@ endif
 if ENABLE_UDEV
 udevdir     = $(sysconfdir)/udev/rules.d
 endif
+
+vzdir       = /vz
 
 initddir    = $(sysconfdir)/init.d
 netsdir     = $(sysconfdir)/sysconfig/network-scripts
