--- a/pathsubst.am
+++ b/pathsubst.am
@@ -1,4 +1,4 @@
-#  Copyright (C) 2006-2010, Parallels, Inc. All rights reserved.
+#  Copyright (C) 2006-2012, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -22,7 +22,8 @@ pathsubst_RULES = \
 	s!@'PKGCONFDIR'@!$(pkgconfdir)!g; \
 	s!@'VPSCONFDIR'@!$(vpsconfdir)!g; \
 	s!@'PKGDATADIR'@!$(pkgdatadir)!g; \
-	s!@'SCRIPTDIR'@!$(scriptdir)!g;
+	s!@'SCRIPTDIR'@!$(scriptdir)!g; \
+	s!@'VZDIR'@!$(vzdir)!g;
 
 pathsubst = sed -e '$(pathsubst_RULES)'
 
