--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -1,4 +1,4 @@
-#  Copyright (C) 2000-2008, Parallels, Inc. All rights reserved.
+#  Copyright (C) 2000-2012, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -21,6 +21,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/include \
               -DSBINDIR=\"$(sbindir)\" \
               -DPKGCONFDIR=\"$(pkgconfdir)\" \
               -DSCRIPTDIR=\"$(scriptdir)\" \
+              -DVZDIR=\"$(vzdir)\" \
               $(XML_CPPFLAGS)
 
 AM_CFLAGS = $(CGROUP_CFLAGS)
